--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,13 @@
-<!-- Custom MathJax Load -->
+<!-- Custom MathJax Load with Inline Configuration -->
 {% if page.mathjax %}
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        processEscapes: true
+      }
+    });
+  </script>
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
